2.0 unreleased
==============

- Avoid acquiring `portal_properties` and call it via a proper API.
  [hannosch]

- Turned the remaining useful listing views into browser resources. The album
  view is gone, since there are many add-ons available solving this use-case
  in a much better way now.
  [hannosch]

- Next round of cleanup, removing unused templates and migration code. Renamed
  the interface folder to interfaces to have a consistent naming.
  [hannosch]

- Next step in folder_listing refactoring. We have a FolderContents adapter
  instead of the getFolderContents script now. Special behavior for
  Collections is achieved via a sub-classed view specific to IATTopic.
  [hannosch]

- Removed `poor-mans-versioning` aka. athistoryaware. We have a versioning
  story called CMFEditions now.
  [hannosch]

- Turned the folder_listing template into a proper browser page.
  [hannosch]

- Turned the document_relateditems template into a proper browser page.
  [hannosch]

- Reverted the use of the pretty_title_or_id Python script.
  [hannosch]

- Changed objectIds and objectValues calls to use the IContainer API.
  [hannosch]

- Use Batch from its new location plone.sequencebatch. We don't have a direct
  CMFPlone dependency anymore.
  [hannosch]

- Use the INextPreviousProvider interface from plone.navigation.
  [hannosch]

- Import ISelectableConstrainTypes interface from plone.navigation.
  [hannosch]

- Removed inline-editing markup from default view templates.
  [hannosch]

- Don't assume regular (non-btree) folders for next/previous support.
  [witsch]

- Removed various dependencies on CMFPlone.
  [hannosch]

- Cleaned up tests some more. No longer rely on the testfixture extension
  profile but adapt the tests to default Plone instead.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Merged change r24257 from 3.2 branch of the event.pt view to use the new