@@ -1,6 +1,5 @@
-import simplejson as json
+import json
 from zope.i18n import translate
-from Acquisition import aq_inner
 from Products.Five.browser import BrowserView
 
 class JSONCriteriaForField(BrowserView):
@@ -9,7 +8,7 @@ class JSONCriteriaForField(BrowserView):
     def __call__(self):
         vocab = self.context.allowedCriteriaForField(self.request['field'],
             display_list=True)
-        
+
         self.request.response.setHeader(
             'Content-Type', 'application/json; charset=utf-8')
         return json.dumps([
